# milsymbol-py

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
.github/workflows/: tests.yml
milsymbol/: __init__.py  modifiers.py  renderer.py  symbol.py  textfields.py
milsymbol/data/: colormodes.json  combined-tests.json  dasharrays.json  geometries.json  modifier-tests.json  smoke-tests.json  textfield-tests.json
playground/: milsymbol.js  playground.html
tests/: test_corpus.py  test_icon_modifiers.py  test_server.py  test_smoke.py  test_textfields_modifiers.py
tools/: extract_data.mjs  extract_modifiers.mjs  gen_corpus_ref.mjs
